# gba-audio-extractor

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: main.cpp  static.cpp
src/extractor/: CMakeLists.txt  constants.h  event.h  extractor.cpp  extractor.h  frequencies.py  midi.h  mp2k_driver.cpp  mp2k_driver.h  mplaydef.h  noise.cpp  noise.h  note.h  notes.txt  player.cpp  player.h  sample.h  song.cpp  song.h  track.cpp  track.h  voice.cpp  voice.h
src/frontend/: CMakeLists.txt  frontend.cpp  frontend.h  settings.cpp  settings.h
src/frontend/modules/: CMakeLists.txt
src/frontend/modules/glad/: glad.c  glad.h
src/frontend/modules/imgui-filebrowser/: imfilebrowser.h
src/frontend/modules/sequencer/: ImSequencer.cpp  ImSequencer.h
src/frontend/widgets/: event_tables.cpp  event_tables.h  sequencer.cpp  sequencer.h
src/include/: bin.h  constants.h  error.h  types.h
src/include/util/: algorithm.h  file.h  gba.h
